helm/hill/kestra/kestra-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kestra-custom-ingress
spec:
  tls:
  - hosts:
      - kestra-dev.haile.click
    secretName: kestra-cert
  rules:
  - host: kestra-dev.haile.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kestra-service
            port:
              number: 8080
  ingressClassName: nginx
